--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -414,6 +414,12 @@ footer.sticky-bottom {
   }
 }
 
+.post-title {
+  mjx-container[jax="CHTML"][display="true"] {
+    display: unset;
+  }
+}
+
 .post-list {
   margin: 0;
   margin-bottom: 40px;
@@ -445,6 +451,10 @@ footer.sticky-bottom {
       &:hover {
         color: var(--global-theme-color);
       }
+    }
+
+    mjx-container[jax="CHTML"][display="true"] {
+      display: unset;
     }
   }
 }
@@ -851,6 +861,31 @@ pre {
 
 nav[data-toggle="toc"] {
   top: 5rem;
+
+  .nav .nav>li>a {
+    font-size: .875rem;
+  }
+
+  .nav>li>a {
+    color: var(--global-text-color);
+    font-size: .875rem;
+
+    &:hover {
+      color: var(--global-hover-color);
+      border-left-color: var(--global-hover-color);
+    }
+  }
+
+  .nav-link.active {
+    color: var(--global-theme-color);
+    border-left-color: var(--global-theme-color);
+    font-size: .875rem;
+
+    &:hover {
+      color: var(--global-hover-color);
+      border-left-color: var(--global-hover-color);
+    }
+  }
 }
 
 /* small screens */
