--- a/_sass/_math.scss
+++ b/_sass/_math.scss
@@ -1,3 +1,11 @@
+.MathJax {
+    padding:0.25em;
+    overflow-x:auto;
+    overflow-y: hidden;
+    min-width: 0 ! important;
+    max-width: 100%;
+}
+
 .thm {
     display: block;
     font-style: italic;
