--- a/_includes/scripts/misc.html
+++ b/_includes/scripts/misc.html
@@ -14,7 +14,11 @@
    <!-- Sidebar Table of Contents -->
    <script defer src="https://cdn.rawgit.com/afeld/bootstrap-toc/v1.0.1/dist/bootstrap-toc.min.js"></script>
  {% endif %}
- 
+
+  <!-- Bootstrap Table -->
+  <script defer src="https://unpkg.com/bootstrap-table@1.21.3/dist/bootstrap-table.min.js"></script>
+
   <!-- Load Common JS -->
+  <script src="{{ '/assets/js/no_defer.js' | relative_url }}"></script>
   <script defer src="{{ '/assets/js/common.js' | relative_url }}"></script>
   <script defer src="{{ '/assets/js/copy_code.js' | relative_url }}" type="text/javascript"></script>
