--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -10,6 +10,7 @@
   --global-theme-color: #{$blue-color-dark};
   --global-hover-color: #{$blue-color-dark};
   --global-footer-bg-color: #{$grey-color-dark};
+  --global-hover-text-color: #{$white-color};
   --global-footer-text-color: #{$grey-color-light};
   --global-footer-link-color: #{$white-color};
   --global-distill-app-color: #{$grey-color};
@@ -40,6 +41,7 @@ html[data-theme='dark'] {
   --global-text-color-light: #{$grey-color-light};
   --global-theme-color: #{$blue-color-light};
   --global-hover-color: #{$blue-color-light};
+  --global-hover-text-color: #{$white-color};
   --global-footer-bg-color: #{$grey-color-light};
   --global-footer-text-color: #{$grey-color-dark};
   --global-footer-link-color: #{$black-color};
