--- a/_sass/_distill.scss
+++ b/_sass/_distill.scss
@@ -3,6 +3,7 @@
  ******************************************************************************/
 
 d-byline {
+  // border-bottom:0px !important;
   border-top-color: var(--global-divider-color) !important;
 }
 
