--- a/_includes/scripts/mathjax.html
+++ b/_includes/scripts/mathjax.html
@@ -2,6 +2,6 @@
   <!-- MathJax -->
   <script src="/assets/js/mathjax_config.js" defer></script>
   <script src="https://polyfill.io/v3/polyfill.min.js?features=es6" defer></script>
-  <!-- <script  id="MathJax-script" defer src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script> -->
-  <script  id="MathJax-script" defer src="https://cdn.jsdelivr.net/npm/mathjax@4.0.0-alpha.1/es5/tex-mml-chtml.js"></script>
+  <script  id="MathJax-script" defer src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+  <!-- <script  id="MathJax-script" defer src="https://cdn.jsdelivr.net/npm/mathjax@4.0.0-alpha.1/es5/tex-mml-chtml.js"></script> -->
   {%- endif %}
