--- a/_layouts/distill.html
+++ b/_layouts/distill.html
@@ -8,7 +8,7 @@
     {%- include head.html %}
 
     {% include scripts/jquery.html %}
-    {% include scripts/mathjax.html %}
+    <!-- {% include scripts/mathjax.html %} -->
     <!-- Distill js -->
     <script src="{{ '/assets/js/distillpub/template.v2.js' | relative_url }}"></script>
     <script src="{{ '/assets/js/distillpub/transforms.v2.js' | relative_url }}"></script>
@@ -39,21 +39,7 @@
           ]
         }{% if forloop.last == false %},{% endif %}
         {% endfor %}
-      ],
-      "katex": {
-        "delimiters": [
-          {
-            "left": "$",
-            "right": "$",
-            "display": false
-          },
-          {
-            "left": "$$",
-            "right": "$$",
-            "display": true
-          }
-        ]
-      }
+      ]
     }</script>
   </d-front-matter>
 
@@ -114,10 +100,10 @@
         {{ content }}
       </d-article>
 
-      <d-appendix>
+      <!-- <d-appendix>
         <d-footnote-list></d-footnote-list>
         <d-citation-list></d-citation-list>
-      </d-appendix>
+      </d-appendix> -->
 
       <d-bibliography src="{{ page.bibliography | prepend: '/assets/bibliography/' | relative_url }}"></d-bibliography>
 
