--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -31,7 +31,7 @@ table {
   }
 
   th {
-    font-weight: bold;
+    font-weight: 400;
   }
 }
 
@@ -76,6 +76,7 @@ blockquote {
   margin-top: 0.75rem;
   margin-bottom: 1.5rem;
   text-align: center;
+  color: var(--global-text-color);
 }
 
 // Card
