--- a/_includes/news.html
+++ b/_includes/news.html
@@ -1,4 +1,4 @@
-<div class="news">
+<!-- <div class="news">
   {% if site.news != blank -%}
   {%- assign news_size = site.news | size -%}
   <div class="table-responsive" {% if include.limit and site.announcements.scrollable and news_size > 3 %}style="max-height: 60vw"{% endif %}>
@@ -11,8 +11,8 @@
     {% endif %}
     {% for item in news limit: news_limit %}
       <tr>
-        <th scope="row" style="width: 20%;">{{ item.date | date: "%b %-d, %Y" }}</th>
-        <td>
+        <th scope="row" style="width: 15%">{{ item.date | date: "%b %-d, %Y" }}</th>
+        <td >
           {% if item.inline -%}
             {{ item.content | remove: '<p>' | remove: '</p>' | emojify }}
           {%- else -%}
@@ -23,6 +23,39 @@
     {%- endfor %}
     </table>
   </div>
+{%- else -%}
+  <p>No news so far...</p>
+{%- endif %}
+</div> -->
+
+
+<div class="news">
+  {% if site.news != blank -%}
+  {%- assign news_size = site.news | size -%}
+  {%- assign news = site.news | reverse -%}
+  {% if include.limit and site.announcements.limit %}
+  {% assign news_limit = site.announcements.limit %}
+  {% else %}
+  {% assign news_limit = news_size %}
+  {% endif %}
+  <ol style="list-style-type: none; padding: 0;">
+  {% for item in news limit: news_limit %}
+  <li>
+    <div class="row">
+      <div class="col-sm-2" style="font-weight: bolder;">
+        {{ item.date | date: "%b %-d, %Y" }}
+      </div>
+    <div class="col-sm-6">   
+      {% if item.inline -%}
+      {{ item.content | remove: '<p>' | remove: '</p>' | emojify }}
+      {%- else -%}
+      <a class="news-title" href="{{ item.url | relative_url }}">{{ item.title }}</a>
+      {%- endif %}
+  </div>
+</div>
+  </li>
+{%- endfor %}
+</ol>
 {%- else -%}
   <p>No news so far...</p>
 {%- endif %}
