remove preview and add number for publication

--- a/_includes/selected_papers.html
+++ b/_includes/selected_papers.html
@@ -1,4 +1,4 @@
 
-          <div class="publications">
+          <div class="selected_publications">
             {% bibliography -f papers -q @*[selected=true]* %}
           </div>
