--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -567,16 +567,22 @@ footer.sticky-bottom {
       font-size: 1.5rem;
     }
   }
-
+  // @media(min-width: 768px){
   h2.year {
     color: var(--global-divider-color);
     border-top: 1px solid var(--global-divider-color);
     padding-top: 1rem;
-    margin-top: 2rem;
+    margin-top: 1rem;
     margin-bottom: -2rem;
     text-align: right;
   }
-
+  // }
+  @media(max-width: 576px){
+h2.year{
+  display: none;
+}
+  }
+    
 
 
   ol.bibliography {
@@ -587,14 +593,9 @@ footer.sticky-bottom {
 
     li {
 
-      &:before {
-        counter-increment: paper-counter;
-        content: counter(paper-counter) ". ";
-        font-weight: bolder;
-      }  
       
       margin-bottom: 1rem;
-      display:flex;
+      // display:flex;
 
       // .preview {
       //   width: 100%;
@@ -629,6 +630,10 @@ footer.sticky-bottom {
 
       .title {
         font-weight: bolder;
+        &:before {
+          counter-increment: paper-counter;
+          content: counter(paper-counter) ". ";
+        }  
       }
 
       .author {
