--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -58,7 +58,7 @@ layout: default
 
           <!-- Selected papers -->
           {% if page.selected_papers -%}
-            <h2><a href="{{ '/papers/' | relative_url }}" style="color: inherit;">Selected publications</a></h2>
+            <h2 style="padding-top: 1rem;"><a href="{{ '/papers/' | relative_url }}" style="color: inherit;">Selected publications</a></h2>
             {%- include selected_papers.html %}
           {%- endif %}
 
