--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,17 +22,19 @@ layout: default
     <p class="post-meta">{{ page.date | date: "%B %-d, %Y" }}{%- if page.author -%} • {{ page.author }}{%- endif -%}{%- if page.meta -%} • {{ page.meta }}{%- endif -%}</p>
     <p class="post-tags">
       {% if url_beginning == '/blog/' -%}
-      <a href="{{ year | prepend: '/blog/' | prepend: site.baseurl}}"> <i class="fas fa-calendar fa-sm"></i> {{ year }} </a>
+      <a href="{{ year | prepend: '/blog/' | prepend: site.baseurl}}"> 
+        <i class="fas fa-calendar fa-sm"></i> {{ year }} </a>
       {% else %}
-      <i class="fa-solid fa-calendar fa-sm"></i> {{ year }}
+      <i class="fas fa-calendar fa-sm"></i> {{ year }}
       {%- endif %}
       {%- if tags != "" %}
       &nbsp; &middot; &nbsp;
         {% for tag in page.tags -%}
         {% if url_beginning == '/blog/' -%}
-        <a href="{{ tag | slugify | prepend: '/blog/tag/' | prepend: site.baseurl}}"> <i class="fa-solid fa-hashtag fa-sm"></i> {{ tag }}</a> &nbsp;
+        <a href="{{ tag | slugify | prepend: '/blog/tag/' | prepend: site.baseurl}}"> 
+          <i class="fas fa-hashtag fa-sm"></i> {{ tag }}</a> &nbsp;
         {% else %}
-        <i class="fa-solid fa-hashtag fa-sm"></i> {{ tag }} &nbsp;
+        <i class="fas fa-hashtag fa-sm"></i> {{ tag }} &nbsp;
         {%- endif %}
 
         {% endfor -%}
@@ -42,9 +44,10 @@ layout: default
       &nbsp; &middot; &nbsp;
         {% for category in page.categories -%}
         {% if url_beginning == '/blog/' -%}
-        <a href="{{ category | slugify | prepend: '/blog/category/' | prepend: site.baseurl}}"> <i class="fa-solid fa-tag fa-sm"></i> {{ category }}</a> &nbsp;
+        <a href="{{ category | slugify | prepend: '/blog/category/' | prepend: site.baseurl}}"> 
+          <i class="fas fa-tag fa-sm"></i> {{ category }}</a> &nbsp;
         {% else %}
-        <i class="fa-solid fa-tag fa-sm"></i> {{ category }} &nbsp;
+        <i class="fas fa-tag fa-sm"></i> {{ category }} &nbsp;
         {%- endif %}
       {% endfor -%}
       {% endif %}
