--- a/_layouts/bib.html
+++ b/_layouts/bib.html
@@ -30,7 +30,11 @@
         </div> -->
 
         <!-- Entry bib key -->
-        <div id="{{entry.key}}" class="col-sm-8">
+        {%- if page.url == '/papers/' -%}
+          <div id="{{entry.key}}" class="col-sm-10">
+        {%- else -%}
+          <div id="{{entry.key}}" class="col-sm-8">
+        {%- endif -%}
         <!-- Title -->
         <div class="title">{{entry.title}}</div>
         <!-- Author -->
