change *.html to *.liquid

--- a/_includes/head.liquid
+++ b/_includes/head.liquid
@@ -1,5 +1,5 @@
     <!-- Metadata, OpenGraph and Schema.org -->
-    {% include metadata.html %}
+    {% include metadata.liquid %}
 
     <!-- Bootstrap & MDB -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@{{ site.bootstrap.version }}/dist/css/bootstrap.min.css" rel="stylesheet" integrity="{{ site.bootstrap.integrity.css }}" crossorigin="anonymous">
@@ -50,5 +50,5 @@
 
     <!-- Google Analytics -->
     {% if site.google_analytics and jekyll.environment == 'production' %}
-    {% include analytics.html %}
+    {% include analytics.liquid %}
     {% endif %}
