--- a/_includes/header.liquid
+++ b/_includes/header.liquid
@@ -23,7 +23,7 @@
       {%- elsif site.enable_navbar_social -%}
       <!-- Social Icons -->
       <div class="navbar-brand social">
-        {% include social.html %}
+        {% include social.liquid %}
       </div>
       {% endif %}
       <!-- Navbar Toggle -->
