--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<!-- about.html -->
+<!-- about.liquid -->
       <div class="post">
         <header class="post-header">
           <h1 class="post-title">
@@ -24,7 +24,7 @@ layout: default
               {% endif %}
 
               {% capture sizes %}(min-width: {{site.max_width}}) {{ site.max_width | minus: 30 | times: 0.3}}px, (min-width: 576px) 30vw, 95vw"{% endcapture %}
-              {% include figure.html
+              {% include figure.liquid
                  path = profile_image_path
                  class = profile_image_class
                  sizes = sizes
@@ -47,26 +47,26 @@ layout: default
           <!-- News -->
           {% if page.news and site.announcements.enabled -%}
             <h2><a href="{{ '/news/' | relative_url }}" style="color: inherit;">News</a></h2>
-            {%- include news.html limit=true %}
+            {%- include news.liquid limit=true %}
           {%- endif %}
 
           <!-- Latest posts -->
           {% if page.latest_posts -%}
             <h2><a href="{{ '/blog/' | relative_url }}" style="color: inherit;">Latest posts</a></h2>
-            {%- include latest_posts.html %}
+            {%- include latest_posts.liquid %}
           {%- endif %}
 
           <!-- Selected papers -->
           {% if page.selected_papers -%}
             <h2 style="padding-top: 1rem;"><a href="{{ '/papers/' | relative_url }}" style="color: inherit;">Selected publications</a></h2>
-            {%- include selected_papers.html %}
+            {%- include selected_papers.liquid %}
           {%- endif %}
 
           <!-- Social -->
           {%- if page.social %}
             <div class="social">
               <div class="contact-icons">
-                {% include social.html %}
+                {% include social.liquid %}
               </div>
 
               <div class="contact-note">
