--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -1,6 +1,6 @@
 ---
 ---
-<!-- _layouts/bib.html -->
+<!-- _layouts/bib.liquid -->
       <div class="row">
         <!-- <div class="col-sm-2 {% if entry.preview %}preview{% else %}abbr{% endif %}">
         {%- if entry.preview -%}
@@ -8,7 +8,7 @@
           <img class="preview z-depth-1 rounded" src="{{ entry.preview }}">
           {%- else -%}
             {%- assign entry_path = entry.preview | prepend: '/assets/img/publication_preview/' -%}
-            {% include figure.html
+            {% include figure.liquid
             path=entry_path
             sizes="200px"
             class="preview z-depth-1 rounded"
