--- a/_layouts/cv.liquid
+++ b/_layouts/cv.liquid
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<!-- _layouts/cv.html -->
+<!-- _layouts/cv.liquid -->
 <div id="my-container"></div>
 
 <script src="../assets/js/pdfobject.js"></script>
