--- a/_layouts/distill.liquid
+++ b/_layouts/distill.liquid
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
-<!-- _layouts/distill.html -->
+<!-- _layouts/distill.liquid -->
 {%- assign year = page.date | date: "%Y" -%}
 {%- assign tags = page.tags | join: "" -%}
 {%- assign categories = page.categories | join: "" -%}
 <html>
   <head>
-    {%- include head.html %}
+    {%- include head.liquid %}
     {%- if site.enable_medium_zoom %}
     <!-- Medium Zoom JS -->
     <script defer src="https://cdn.jsdelivr.net/npm/medium-zoom@{{ site.medium_zoom.version }}/dist/medium-zoom.min.js" integrity="{{ site.medium_zoom.integrity }}" crossorigin="anonymous"></script>
     <script defer src="{{ '/assets/js/zoom.js' | relative_url | bust_file_cache }}"></script>
     {%- endif -%}
 
-    {% include scripts/jquery.html %}
-    <!-- {% include scripts/mathjax.html %} -->
+    {% include scripts/jquery.liquid %}
+    <!-- {% include scripts/mathjax.liquid %} -->
     <!-- Distill js -->
     <script src="{{ '/assets/js/distillpub/template.v2.js' | relative_url }}"></script>
     <script src="{{ '/assets/js/distillpub/transforms.v2.js' | relative_url }}"></script>
@@ -51,7 +51,7 @@
   <body class="{%- if site.navbar_fixed -%}fixed-top-nav{%- endif -%} {%- unless site.footer_fixed -%}sticky-bottom-footer{%- endunless -%}">
 
     <!-- Header -->
-    {%- include header.html %}
+    {%- include header.liquid %}
 
     <!-- Content -->
     <div class="post distill">
@@ -113,19 +113,19 @@
       <d-bibliography src="{{ page.bibliography | prepend: '/assets/bibliography/' | relative_url }}"></d-bibliography>
 
       {%- if site.disqus_shortname and page.disqus_comments -%}
-        {% include disqus.html %}
+        {% include disqus.liquid %}
       {%- endif %}
       {%- if site.giscus.repo and page.giscus_comments -%}
-        {% include giscus.html %}
+        {% include giscus.liquid %}
       {%- endif -%}
 
     </div>
 
     <!-- Footer -->
-    {%- include footer.html %}
+    {%- include footer.liquid %}
 
-    {% include scripts/bootstrap.html %}
-    {% include scripts/analytics.html %}
-    {% include scripts/progressBar.html %}
+    {% include scripts/bootstrap.liquid %}
+    {% include scripts/analytics.liquid %}
+    {% include scripts/progressBar.liquid %}
   </body>
 </html>
