--- a/_layouts/page.liquid
+++ b/_layouts/page.liquid
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<!-- page.html -->
+<!-- page.liquid -->
         <div class="post">
 
           <header class="post-header">
