--- a/_layouts/post.liquid
+++ b/_layouts/post.liquid
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<!-- _layouts/post.html -->
+<!-- _layouts/post.liquid -->
 {%- assign year = page.date | date: "%Y" -%}
 {%- assign tags = page.tags | join: "" -%}
 {%- assign categories = page.categories | join: "" -%}
@@ -69,15 +69,15 @@ layout: default
 
   {%- if site.related_blog_posts.enabled -%}
     {%- if page.related_posts == null or page.related_posts -%}
-      {% include related_posts.html %}
+      {% include related_posts.liquid %}
     {%- endif %}
   {%- endif %}
 
   {%- if site.disqus_shortname and page.disqus_comments -%}
-    {% include disqus.html %}
+    {% include disqus.liquid %}
   {%- endif %}
   {%- if site.giscus.repo and page.giscus_comments -%}
-    {% include giscus.html %}
+    {% include giscus.liquid %}
   {%- endif -%}
 
 </div>
