Reformat and add .prettierrc file

--- a/_includes/analytics.liquid
+++ b/_includes/analytics.liquid
@@ -8,7 +8,7 @@
   function gtag() {
     dataLayer.push(arguments);
   }
-  gtag("js", new Date());
+  gtag('js', new Date());
 
-  gtag("config", "G-5VQEBS4MC3");
+  gtag('config', 'G-5VQEBS4MC3');
 </script>
