--- a/_includes/scripts/analytics.liquid
+++ b/_includes/scripts/analytics.liquid
@@ -3,7 +3,9 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics }}"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){ window.dataLayer.push(arguments); }
+    function gtag() {
+      window.dataLayer.push(arguments);
+    }
     gtag('js', new Date());
     gtag('config', '{{ site.google_analytics }}');
   </script>
@@ -12,7 +14,11 @@
   <!-- Panelbear Analytics - We respect your privacy -->
   <script async src="https://cdn.panelbear.com/analytics.js?site={{site.panelbear_analytics}}"></script>
   <script>
-    window.panelbear = window.panelbear || function() { (window.panelbear.q = window.panelbear.q || []).push(arguments); };
+    window.panelbear =
+      window.panelbear ||
+      function () {
+        (window.panelbear.q = window.panelbear.q || []).push(arguments);
+      };
     panelbear('config', { site: '{{site.panelbear_analytics}}' });
   </script>
 {%- endif -%}
