--- a/_layouts/cv.liquid
+++ b/_layouts/cv.liquid
@@ -7,16 +7,17 @@ layout: default
 <script src="../assets/js/pdfobject.js"></script>
 <script>
   var options = {
-    height: "1000px",
-    fallbackLink: "    <p>Oops! Your browser doesn't support inline PDFs!</p> <p><a href='../assets/pdf/Yifan_Jiang_CV.pdf'> Please check here instead 🫡</a></p>",
+    height: '1000px',
+    fallbackLink:
+      "    <p>Oops! Your browser doesn't support inline PDFs!</p> <p><a href='../assets/pdf/Yifan_Jiang_CV.pdf'> Please check here instead 🫡</a></p>",
     pdfOpenParams: {
       view: 'FitV',
       pagemode: 'none',
       toolbar: '0',
       statusbar: '0',
       messages: '0',
-      navpanes: '0'
-    }
+      navpanes: '0',
+    },
   };
-  PDFObject.embed("../assets/pdf/Yifan_Jiang_CV.pdf", "#my-container", options);
+  PDFObject.embed('../assets/pdf/Yifan_Jiang_CV.pdf', '#my-container', options);
 </script>
