--- a/_layouts/distill.liquid
+++ b/_layouts/distill.liquid
@@ -1,15 +1,20 @@
-<!DOCTYPE html>
+<!doctype html>
 <!-- _layouts/distill.liquid -->
-{%- assign year = page.date | date: "%Y" -%}
-{%- assign tags = page.tags | join: "" -%}
-{%- assign categories = page.categories | join: "" -%}
+{%- assign year = page.date | date: '%Y' -%}
+{%- assign tags = page.tags | join: '' -%}
+{%- assign categories = page.categories | join: '' -%}
 <html>
   <head>
     {%- include head.liquid %}
     {%- if site.enable_medium_zoom %}
-    <!-- Medium Zoom JS -->
-    <script defer src="https://cdn.jsdelivr.net/npm/medium-zoom@{{ site.medium_zoom.version }}/dist/medium-zoom.min.js" integrity="{{ site.medium_zoom.integrity }}" crossorigin="anonymous"></script>
-    <script defer src="{{ '/assets/js/zoom.js' | relative_url | bust_file_cache }}"></script>
+      <!-- Medium Zoom JS -->
+      <script
+        defer
+        src="https://cdn.jsdelivr.net/npm/medium-zoom@{{ site.medium_zoom.version }}/dist/medium-zoom.min.js"
+        integrity="{{ site.medium_zoom.integrity }}"
+        crossorigin="anonymous"
+      ></script>
+      <script defer src="{{ '/assets/js/zoom.js' | relative_url | bust_file_cache }}"></script>
     {%- endif -%}
 
     {% include scripts/jquery.liquid %}
@@ -19,65 +24,69 @@
     <script src="{{ '/assets/js/distillpub/transforms.v2.js' | relative_url }}"></script>
     <script src="{{ '/assets/js/distillpub/overrides.js' | relative_url }}"></script>
     {% if page._styles %}
-    <!-- Page/Post style -->
-    <style type="text/css">
-      {{ page._styles }}
-    </style>
+      <!-- Page/Post style -->
+      <style type="text/css">
+        {{ page._styles }}
+      </style>
     {%- endif %}
   </head>
 
   <d-front-matter>
-    <script async type="text/json">{
-      "title": "{{ page.title }}",
-      "description": "{{ page.description }}",
-      "published": "{{ page.date | date: '%B %-d, %Y' }}",
-      "authors": [
-        {% for author in page.authors -%}
-        {
-          "author": "{{ author.name }}",
-          "authorURL": "{{ author.url }}",
-          "affiliations": [
-            {
-              "name": "{{ author.affiliations.name }}",
-              "url": "{{ author.affiliations.url }}"
-            }
-          ]
-        }{% if forloop.last == false %},{% endif %}
-        {% endfor %}
-      ]
-    }</script>
+    <script async type="text/json">
+      {
+        "title": "{{ page.title }}",
+        "description": "{{ page.description }}",
+        "published": "{{ page.date | date: '%B %-d, %Y' }}",
+        "authors": [
+          {% for author in page.authors -%}
+          {
+            "author": "{{ author.name }}",
+            "authorURL": "{{ author.url }}",
+            "affiliations": [
+              {
+                "name": "{{ author.affiliations.name }}",
+                "url": "{{ author.affiliations.url }}"
+              }
+            ]
+          }{% if forloop.last == false %},{% endif %}
+          {% endfor %}
+        ]
+      }
+    </script>
   </d-front-matter>
 
   <body class="{%- if site.navbar_fixed -%}fixed-top-nav{%- endif -%} {%- unless site.footer_fixed -%}sticky-bottom-footer{%- endunless -%}">
-
     <!-- Header -->
     {%- include header.liquid %}
 
     <!-- Content -->
     <div class="post distill">
-
       <d-title>
         <h1>{{ page.title }}</h1>
         <!-- <p>{{ page.description }}</p> -->
-        <p class="post-meta">{{ page.date | date: "%B %-d, %Y" }}{%- if page.author -%} • {{ page.author }}{%- endif -%}{%- if page.meta -%} • {{ page.meta }}{%- endif -%}</p>
+        <p class="post-meta">
+          {{ page.date | date: '%B %-d, %Y' }}
+          {%- if page.author -%}• {{ page.author }}{%- endif -%}
+          {%- if page.meta -%}• {{ page.meta }}{%- endif -%}
+        </p>
         <p class="post-tags">
           <a href="{{ year | prepend: '/blog/' | prepend: site.baseurl}}"> <i class="fas fa-calendar fa-sm"></i> {{ year }} </a>
-          {%- if tags != "" %}
-          &nbsp; &middot; &nbsp;
+          {%- if tags != '' %}
+            &nbsp; &middot; &nbsp;
             {% for tag in page.tags -%}
-            <a href="{{ tag | slugify | prepend: '/blog/tag/' | prepend: site.baseurl}}">
-              <i class="fas fa-hashtag fa-sm"></i> {{ tag }}</a> &nbsp;
-              {% endfor -%}
+              <a href="{{ tag | slugify | prepend: '/blog/tag/' | prepend: site.baseurl}}"> <i class="fas fa-hashtag fa-sm"></i> {{ tag }}</a> &nbsp;
+            {% endfor -%}
           {% endif %}
-    
-          {%- if categories != "" %}
-          &nbsp; &middot; &nbsp;
+
+          {%- if categories != '' %}
+            &nbsp; &middot; &nbsp;
             {% for category in page.categories -%}
-            <a href="{{ category | slugify | prepend: '/blog/category/' | prepend: site.baseurl}}">
-              <i class="fas fa-tag fa-sm"></i> {{ category }}</a> &nbsp;
-              {% endfor -%}
+              <a href="{{ category | slugify | prepend: '/blog/category/' | prepend: site.baseurl}}">
+                <i class="fas fa-tag fa-sm"></i> {{ category -}}
+              </a>
+              &nbsp;
+            {% endfor -%}
           {% endif %}
-    
         </p>
       </d-title>
 
@@ -85,30 +94,36 @@
 
       <d-article>
         {% if page.toc -%}
-        <d-contents>
-          <nav class="l-text figcaption">
-          <h3>Contents</h3>
-            {% for section in page.toc -%}
-            <div><a href="#{{ section.name | slugify }}">{{ section.name }}</a></div>
-            {% if section.subsections -%}
-            <ul>
-              {% for subsection in section.subsections -%}
-              <li><a href="#{{ subsection.name | slugify }}">{{ subsection.name }}</a></li>
-              {% endfor %}
-            </ul>
-            {%- endif -%}
-            {%- endfor %}
-          </nav>
-        </d-contents>
+          <d-contents>
+            <nav class="l-text figcaption">
+              <h3>Contents</h3>
+              {% for section in page.toc -%}
+                <div>
+                  <a href="#{{ section.name | slugify }}">{{ section.name }}</a>
+                </div>
+                {% if section.subsections -%}
+                  <ul>
+                    {% for subsection in section.subsections -%}
+                      <li>
+                        <a href="#{{ subsection.name | slugify }}">{{ subsection.name }}</a>
+                      </li>
+                    {% endfor %}
+                  </ul>
+                {%- endif -%}
+              {%- endfor %}
+            </nav>
+          </d-contents>
         {%- endif %}
 
         {{ content }}
       </d-article>
 
-      <!-- <d-appendix>
-        <d-footnote-list></d-footnote-list>
-        <d-citation-list></d-citation-list>
-      </d-appendix> -->
+      <!--
+        <d-appendix>
+          <d-footnote-list></d-footnote-list>
+          <d-citation-list></d-citation-list>
+        </d-appendix>
+      -->
 
       <d-bibliography src="{{ page.bibliography | prepend: '/assets/bibliography/' | relative_url }}"></d-bibliography>
 
@@ -118,7 +133,6 @@
       {%- if site.giscus.repo and page.giscus_comments -%}
         {% include giscus.liquid %}
       {%- endif -%}
-
     </div>
 
     <!-- Footer -->
