--- a/_layouts/post.liquid
+++ b/_layouts/post.liquid
@@ -2,65 +2,66 @@
 layout: default
 ---
 <!-- _layouts/post.liquid -->
-{%- assign year = page.date | date: "%Y" -%}
-{%- assign tags = page.tags | join: "" -%}
-{%- assign categories = page.categories | join: "" -%}
+{%- assign year = page.date | date: '%Y' -%}
+{%- assign tags = page.tags | join: '' -%}
+{%- assign categories = page.categories | join: '' -%}
 
 {% if page._styles %}
-<!-- Page/Post style -->
-<style type="text/css">
-  {{ page._styles }}
-</style>
+  <!-- Page/Post style -->
+  <style type="text/css">
+    {{ page._styles }}
+  </style>
 {% endif %}
 
 {% assign url_beginning = page.url | slice: 0, 6 %}
 
 <div class="post">
-
   <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
-    <p class="post-meta">{{ page.date | date: "%B %-d, %Y" }}{%- if page.author -%} • {{ page.author }}{%- endif -%}{%- if page.meta -%} • {{ page.meta }}{%- endif -%}</p>
+    <p class="post-meta">
+      {{ page.date | date: '%B %-d, %Y' }}
+      {%- if page.author -%}• {{ page.author }}{%- endif -%}
+      {%- if page.meta -%}• {{ page.meta }}{%- endif -%}
+    </p>
     <p class="post-tags">
       {% if url_beginning == '/blog/' -%}
-      <a href="{{ year | prepend: '/blog/' | prepend: site.baseurl}}"> 
-        <i class="fas fa-calendar fa-sm"></i> {{ year }} </a>
+        <a href="{{ year | prepend: '/blog/' | prepend: site.baseurl}}"> <i class="fas fa-calendar fa-sm"></i> {{ year }} </a>
       {% else %}
-      <i class="fas fa-calendar fa-sm"></i> {{ year }}
+        <i class="fas fa-calendar fa-sm"></i> {{ year }}
       {%- endif %}
-      {%- if tags != "" %}
-      &nbsp; &middot; &nbsp;
+      {%- if tags != '' %}
+        &nbsp; &middot; &nbsp;
         {% for tag in page.tags -%}
-        {% if url_beginning == '/blog/' -%}
-        <a href="{{ tag | slugify | prepend: '/blog/tag/' | prepend: site.baseurl}}"> 
-          <i class="fas fa-hashtag fa-sm"></i> {{ tag }}</a> &nbsp;
-        {% else %}
-        <i class="fas fa-hashtag fa-sm"></i> {{ tag }} &nbsp;
-        {%- endif %}
-
+          {% if url_beginning == '/blog/' -%}
+            <a href="{{ tag | slugify | prepend: '/blog/tag/' | prepend: site.baseurl}}"> <i class="fas fa-hashtag fa-sm"></i> {{ tag }}</a> &nbsp;
+          {% else %}
+            <i class="fas fa-hashtag fa-sm"></i> {{ tag }} &nbsp;
+          {%- endif %}
         {% endfor -%}
       {% endif %}
 
-      {%- if categories != "" %}
-      &nbsp; &middot; &nbsp;
+      {%- if categories != '' %}
+        &nbsp; &middot; &nbsp;
         {% for category in page.categories -%}
-        {% if url_beginning == '/blog/' -%}
-        <a href="{{ category | slugify | prepend: '/blog/category/' | prepend: site.baseurl}}"> 
-          <i class="fas fa-tag fa-sm"></i> {{ category }}</a> &nbsp;
-        {% else %}
-        <i class="fas fa-tag fa-sm"></i> {{ category }} &nbsp;
-        {%- endif %}
-      {% endfor -%}
+          {% if url_beginning == '/blog/' -%}
+            <a href="{{ category | slugify | prepend: '/blog/category/' | prepend: site.baseurl}}">
+              <i class="fas fa-tag fa-sm"></i> {{ category -}}
+            </a>
+            &nbsp;
+          {% else %}
+            <i class="fas fa-tag fa-sm"></i> {{ category }} &nbsp;
+          {%- endif %}
+        {% endfor -%}
       {% endif %}
-
     </p>
   </header>
 
   <article class="post-content">
     {% if page.toc and page.toc.beginning %}
-    <div id="table-of-contents">
-      {% toc %}
-    </div>
-    <hr>
+      <div id="table-of-contents">
+        {% toc %}
+      </div>
+      <hr>
     {% endif %}
     <div id="markdown-content">
       {{ content }}
@@ -79,5 +80,4 @@ layout: default
   {%- if site.giscus.repo and page.giscus_comments -%}
     {% include giscus.liquid %}
   {%- endif -%}
-
 </div>
