--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -53,7 +53,7 @@ table.table a {
 
 .table-dark {
   background-color: transparent;
-  &.table-bordered{
+  &.table-bordered {
     border: 1px solid var(--global-divider-color) !important;
   }
 }
@@ -170,7 +170,6 @@ blockquote {
   }
 }
 
-
 // Navbar customization
 
 .navbar {
@@ -225,7 +224,7 @@ blockquote {
     }
   }
 
-  .navbar-nav .nav-item.active>.nav-link {
+  .navbar-nav .nav-item.active > .nav-link {
     background-color: inherit;
     font-weight: bolder;
     color: var(--global-theme-color);
@@ -332,7 +331,6 @@ blockquote {
     font-size: 0.8rem;
   }
 }
-
 
 // Footer
 footer.fixed-bottom {
@@ -490,7 +488,6 @@ footer.sticky-bottom {
   }
 }
 
-
 // Distill
 
 .distill {
@@ -499,7 +496,6 @@ footer.sticky-bottom {
     text-decoration: none;
   }
 }
-
 
 // Projects
 
@@ -546,7 +542,6 @@ footer.sticky-bottom {
   }
 }
 
-
 // Publications
 
 .publications {
@@ -577,23 +572,18 @@ footer.sticky-bottom {
     text-align: right;
   }
   // }
-  @media(max-width: 576px){
-h2.year{
-  display: none;
-}
+  @media (max-width: 576px) {
+    h2.year {
+      display: none;
+    }
   }
-    
-
 
   ol.bibliography {
     list-style: none;
     padding: 0;
     margin-top: 0;
 
-
     li {
-
-      
       margin-bottom: 1rem;
       // display:flex;
 
@@ -633,7 +623,7 @@ h2.year{
         &:before {
           counter-increment: paper-counter;
           content: counter(paper-counter) ". ";
-        }  
+        }
       }
 
       .author {
@@ -646,12 +636,12 @@ h2.year{
           }
         }
 
-        >em {
+        > em {
           border-bottom: 1px solid;
           font-style: normal;
         }
 
-        >span.more-authors {
+        > span.more-authors {
           color: var(--global-text-color-light);
           border-bottom: 1px dashed var(--global-text-color-light);
           cursor: pointer;
@@ -739,11 +729,8 @@ h2.year{
     &:first-of-type {
       counter-reset: paper-counter;
     }
-
   }
 }
-
-
 
 .selected_publications {
   margin-top: 1rem;
@@ -773,13 +760,10 @@ h2.year{
     text-align: right;
   }
 
-
-
   ol.bibliography {
     list-style: none;
     padding: 0;
     margin-top: 0;
-
 
     li {
       margin-bottom: 1rem;
@@ -829,12 +813,12 @@ h2.year{
           }
         }
 
-        >em {
+        > em {
           border-bottom: 1px solid;
           font-style: normal;
         }
 
-        >span.more-authors {
+        > span.more-authors {
           color: var(--global-text-color-light);
           border-bottom: 1px dashed var(--global-text-color-light);
           cursor: pointer;
@@ -919,10 +903,8 @@ h2.year{
         border-color: var(--global-text-color);
       }
     }
-
   }
 }
-
 
 // Transitioning Themes
 html.transition,
@@ -1020,8 +1002,6 @@ progress::-moz-progress-bar {
   height: inherit;
 }
 
-
-
 // Rouge Color Customization
 figure.highlight {
   margin: 0 0 1rem;
@@ -1050,7 +1030,6 @@ code {
   padding: 3px 3px;
 }
 
-
 .code-display-wrapper {
   position: relative;
   .copy {
@@ -1063,15 +1042,15 @@ code {
     font-family: monospace;
     opacity: 0;
     position: absolute;
-    right: .15rem;
-    top: .12rem;
+    right: 0.15rem;
+    top: 0.12rem;
   }
   &:hover .copy {
     color: var(--global-hover-color);
     background: var(--global-bg-color);
     opacity: 0.6;
     &:hover {
-      opacity: 1;    
+      opacity: 1;
     }
   }
 }
@@ -1113,7 +1092,8 @@ code {
     }
   }
 
-  .dropdown-item.active, .dropdown-item:active {
+  .dropdown-item.active,
+  .dropdown-item:active {
     background-color: var(--global-hover-color);
     color: var(--global-hover-text-color) !important;
 
@@ -1127,13 +1107,13 @@ code {
 nav[data-toggle="toc"] {
   top: 5rem;
 
-  .nav .nav>li>a {
-    font-size: .875rem;
+  .nav .nav > li > a {
+    font-size: 0.875rem;
   }
 
-  .nav>li>a {
+  .nav > li > a {
     color: var(--global-text-color);
-    font-size: .875rem;
+    font-size: 0.875rem;
 
     &:hover {
       color: var(--global-hover-color);
@@ -1144,7 +1124,7 @@ nav[data-toggle="toc"] {
   .nav-link.active {
     color: var(--global-theme-color);
     border-left-color: var(--global-theme-color);
-    font-size: .875rem;
+    font-size: 0.875rem;
 
     &:hover {
       color: var(--global-hover-color);
@@ -1152,7 +1132,6 @@ nav[data-toggle="toc"] {
     }
   }
 }
-
 
 /* small screens */
 @media (max-width: 576px) {
