--- a/_includes/scripts/misc.liquid
+++ b/_includes/scripts/misc.liquid
@@ -29,3 +29,4 @@
 <script src="{{ '/assets/js/no_defer.js' | relative_url }}"></script>
 <script defer src="{{ '/assets/js/common.js' | relative_url }}"></script>
 <script defer src="{{ '/assets/js/copy_code.js' | relative_url }}" type="text/javascript"></script>
+<script defer src="{{ '/assets/js/navbar_underline.js' | relative_url }}"></script>
