--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -57,13 +57,13 @@ layout: default
 
     <!-- Latest posts -->
     {% if page.latest_posts -%}
-      <h2><a href="{{ '/blog/' | relative_url }}" style="color: inherit;">Latest posts</a></h2>
+      <h2><a href="{{ '/blog/' | relative_url }}" style="color: inherit;">Latest Posts</a></h2>
       {%- include latest_posts.liquid %}
     {%- endif %}
 
     <!-- Selected papers -->
     {% if page.selected_papers -%}
-      <h2 style="padding-top: 1rem;"><a href="{{ '/papers/' | relative_url }}" style="color: inherit;">Selected publications</a></h2>
+      <h2 style="padding-top: 1rem;"><a href="{{ '/papers/' | relative_url }}" style="color: inherit;">Selected Publications</a></h2>
       {%- include selected_papers.liquid %}
     {%- endif %}
 
